# supabase-rust

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REF.md  SECURITY.md  TODO.md  release.toml  supabase_interaction.ssot
.github/workflows/: ci.yaml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/tests/: auth_tests.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs
crates/client/tests/: client_integration.rs
crates/functions/: Cargo.toml
crates/functions/src/: lib.rs
crates/functions/tests/: integration_tests.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs  migration.rs  utils.rs
crates/migration/src/examples/: m20240101_000000_initial_setup.rs  m20240101_000001_create_test_rls_table.rs  mod.rs
crates/migration/src/schema_migrations/: directory.rs  mod.rs  postgrest_schema.rs  tests.rs
crates/migration/src/schema_migrations/sql/: V1__initial_schema.sql  V2__add_posts_table.sql
crates/postgrest/: Cargo.toml  README.md
crates/postgrest/src/: lib.rs  schema.rs
crates/postgrest/tests/: integration_test.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: channel.rs  client.rs  error.rs  filters.rs  lib.rs  message.rs
crates/realtime/tests/: integration_test.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/supabase-migration/: Cargo.toml
crates/supabase-migration/src/: lib.rs  main.rs  migration.rs
crates/supabase-rust-client/: Cargo.toml
crates/supabase-rust-client/src/: lib.rs
crates/supabase-rust-migration/src/: lib.rs  m20240101_000001_create_test_rls_table.rs  migration.rs  rls.rs
crates/supabase_client/: Cargo.toml
crates/supabase_client/src/: client.rs  error.rs  lib.rs  models.rs
crates/supabase_client/tests/: client_integration.rs
docs/: COMPATIBILITY.md
examples/: .env.example  Cargo.toml  README.md  setup_db.sh
examples/schema/: README.md  create_tables.sql
examples/src/: auth_admin_example.rs  auth_example.rs  database_example.rs  functions_binary_example.rs  functions_example.rs  postgrest_example.rs  realtime_example.rs  storage_example.rs
src/: config.rs  error.rs  fetch.rs  lib.rs
src/auth/: mod.rs  session.rs  types.rs
src/functions/: mod.rs
src/postgrest/: filter.rs  mod.rs  query.rs  types.rs
src/realtime/: mod.rs
src/storage/: mod.rs  types.rs
supabase/: config.toml
tests/: compatibility_test.rs  integration_tests.rs
