# Root Cargo.toml for the workspace

[workspace]
members = [
    "crates/*"
    # If you have examples or other top-level crates, add them here:
    # "examples"
]
resolver = "2"

# Define shared dependencies for all workspace members
[workspace.dependencies]
# Revert to original path dependencies
supabase-rust-auth = { path = "crates/auth", version = "0.2.0" }
supabase-rust-postgrest = { path = "crates/postgrest", version = "0.2.0" }
supabase-rust-storage = { path = "crates/storage", version = "0.2.0" }
supabase-rust-realtime = { path = "crates/realtime", version = "0.2.0" }
supabase-rust-functions = { path = "crates/functions", version = "0.2.0" }

# Revert Common Libraries to older versions (or versions compatible with 0.2.0)
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3" # Reverted URL
base64 = "0.21"
async-trait = "0.1"
jsonwebtoken = "9.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenv = "0.15.0"
wiremock = "0.5.19" # Reverted wiremock (match original dev-dep?)
anyhow = "1.0" # Keep anyhow

# Dev Dependencies (can also be shared)
[workspace.dev-dependencies]
wiremock = "0.5.19"
dotenv = "0.15.0"
tempfile = "3.7.0"
tokio-test = "0.4"
mockito = "1.0" # Reverted mockito

# Optional: Define common feature flags for the workspace
# [workspace.features]
# default = []

# Define common profile settings for the workspace
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
