# Root Cargo.toml for the workspace

[workspace]
members = [
    "crates/*",
    # "examples" # Keep examples managed separately for now based on its Cargo.toml
]
resolver = "2"

# Define shared dependencies for all workspace members
[workspace.dependencies]
# Update path dependencies to reflect potential renames or keep as is if they resolve correctly
supabase-rust-auth = { path = "crates/auth", version = "0.4.0" }
supabase-rust-postgrest = { path = "crates/postgrest", version = "0.4.0" }
supabase-rust-storage = { path = "crates/storage", version = "0.4.0" }
supabase-rust-realtime = { path = "crates/realtime", version = "0.4.0" }
supabase-rust-functions = { path = "crates/functions", version = "0.4.0" }

# Explicitly define the client dependency IF needed by other workspace members
# supabase-rust-client = { path = "crates/supabase-rust-client", version = "0.3.0" }

# Common Libraries
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3" # Reverted URL
base64 = "0.21"
async-trait = "0.1"
jsonwebtoken = "9.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenv = "0.15.0"
wiremock = "0.5.19"
anyhow = "1.0"

# Additional dev-dependencies moved here
tempfile = "3.7.0"
tokio-test = "0.4"
mockito = "1.0"

# Optional: Define common feature flags for the workspace
# [workspace.features]
# default = []

# Define common profile settings for the workspace
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
