[package]
name = "supabase-rust-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
supabase-rust-gftd = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "1.5", features = ["v4"] }
futures = "0.3"
mime = "0.3"
bytes = "1.0"
tempfile = "3.7"
reqwest = "0.11"

[[bin]]
name = "auth_example"
path = "src/auth_example.rs"

[[bin]]
name = "database_example"
path = "src/database_example.rs"

[[bin]]
name = "storage_example"
path = "src/storage_example.rs"

[[bin]]
name = "realtime_example"
path = "src/realtime_example.rs"

[[bin]]
name = "postgrest_example"
path = "src/postgrest_example.rs"

[[bin]]
name = "functions_example"
path = "src/functions_example.rs"

[[bin]]
name = "auth_admin_example"
path = "src/auth_admin_example.rs"

[[bin]]
name = "functions_binary_example"
path = "src/functions_binary_example.rs"