[package]
name = "supabase-auth"
version = "0.1.0"
edition = "2021"
authors = ["Supabase Rust Client Contributors"]
description = "Authentication client for Supabase"
license = "MIT"
repository = "https://github.com/supabase/supabase-rust"
documentation = "https://docs.rs/supabase-auth"
keywords = ["supabase", "auth", "authentication", "jwt"]
categories = ["authentication", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
url = "2.3"
base64 = "0.21"
async-trait = "0.1"
jsonwebtoken = "9.1"
log = "0.4"
http = "0.2"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"