[package]
name = "supabase-rust-functions"
# version = "0.1.5"
version = "0.2.0"
edition = "2021"
authors = ["Jun Kawasaki"]
description = "Edge Functions client for Supabase"
license = "MIT"
repository = "https://github.com/jun784/supabase-rust"
documentation = "https://docs.rs/supabase-rust-functions"
keywords = ["supabase", "functions", "edge", "serverless"]
categories = ["web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
url = "2.3"
async-trait = "0.1"
log = "0.4"
http = "0.2"
base64 = "0.21"
futures-util = "0.3"
bytes = "1.0"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
mockito = "1.7.0"
