[package]
name = "supabase-rust-migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

# Add other dependencies as needed, e.g., for specific migration logic 