[package]
name = "supabase-rust-migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "^0.12", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
async-trait = "^0.1" # Required by sea-orm-migration

# Add other dependencies as needed, e.g., for specific migration logic 