[package]
name = "supabase-rust-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "supabase_rust_migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
async-trait = "^0.1"
refinery = { version = "0.8", features = ["tokio-postgres"] }
refinery-core = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

[dependencies.sea-orm]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres", 
  "macros"
]
