[package]
name = "supabase-postgrest"
version = "0.1.0"
edition = "2021"
authors = ["Supabase Rust Client Contributors"]
description = "PostgreSQL REST client for Supabase"
license = "MIT"
repository = "https://github.com/supabase/supabase-rust"
documentation = "https://docs.rs/supabase-postgrest"
keywords = ["supabase", "postgrest", "postgresql", "database", "api"]
categories = ["database", "api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
url = "2.3"
async-trait = "0.1"
log = "0.4"
http = "0.2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"