[package]
name = "supabase-rust-realtime"
# version = "0.1.5"
version = "0.2.0"
edition = "2021"
authors = ["Jun Kawasaki"]
description = "Realtime client for Supabase"
license = "MIT"
repository = "https://github.com/jun784/supabase-rust"
documentation = "https://docs.rs/supabase-rust-realtime"
keywords = ["supabase", "realtime", "websocket", "postgres", "subscription"]
categories = ["web-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
url = "2.3"
async-trait = "0.1"
log = "0.4"
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
pretty_env_logger = "0.5"
