[package]
name = "supabase-storage"
version = "0.1.0"
edition = "2021"
authors = ["Supabase Rust Client Contributors"]
description = "Storage client for Supabase"
license = "MIT"
repository = "https://github.com/supabase/supabase-rust"
documentation = "https://docs.rs/supabase-storage"
keywords = ["supabase", "storage", "file", "upload", "download"]
categories = ["web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["rt", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
url = "2.3"
base64 = "0.21"
async-trait = "0.1"
log = "0.4"
http = "0.2"
uuid = { version = "1.4", features = ["v4", "serde"] }
bytes = "1.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"