[package]
name = "supabase-rust-storage"
# version = "0.1.5"
version = "0.2.0"
edition = "2021"
authors = ["Jun Kawasaki"]
description = "Storage client for Supabase"
license = "MIT"
repository = "https://github.com/jun784/supabase-rust"
documentation = "https://docs.rs/supabase-rust-storage"
keywords = ["supabase", "storage", "file", "upload", "download"]
categories = ["web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["rt", "fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
url = "2.3"
base64 = "0.21"
async-trait = "0.1"
log = "0.4"
http = "0.2"
uuid = { version = "1.4", features = ["v4", "serde"] }
bytes = "1.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.10"
