[package]
name = "supabase_client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Inherited from workspace
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Revert to original path dependencies
supabase-rust-auth = { workspace = true }
supabase-rust-postgrest = { workspace = true }
supabase-rust-realtime = { workspace = true }
# Add supabase-rust-storage if needed based on SSOT

# Keep anyhow dependency
anyhow = { workspace = true }

[dev-dependencies]
# Inherit dev dependencies if needed
dotenv = { workspace = true }
# Add mocking and test utilities
wiremock = { workspace = true }
serde_json = { workspace = true }

# Additional dependencies
# tracing = "0.1"
# thiserror = "1.0"

# Potential future dependencies (commented out for now)
# reqwest = { version = "0.12", features = ["json"] }
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# url = "2.5"
# tracing = "0.1"

# Additional dependencies
# chrono = { version = "0.4", features = ["serde"] }